# tera-hot-reload

./: Cargo.toml  README.md
examples/: axum.rs
examples/axum-example/: Cargo.toml
examples/axum-example/src/: main.rs
examples/axum-example/templates/: index.html
src/: lib.rs  mod.rs
src/tera-template-derive/: Cargo.toml
src/tera-template-derive/src/: lib.rs
