[package]
name = "tera-hot-reload"
version = "0.2.0"
authors = ["Tebarem"]
edition = "2021"
description = "Hot Reload for Tera templates"
license = "MIT"
keywords = ["tera", "hot reload", "templating", "html"]

[dependencies]
tera-template-macro = "0.1.0" 
notify-debouncer-full = "0.3.1"
tower-livereload = "0.9.3"