[package]
name = "tera-hot-reload"
version = "0.2.2"
authors = ["Tebarem"]
edition = "2021"
description = "Hot Reload for Tera templates"
license = "MIT"
keywords = ["tera", "hot-reload", "reloading", "templating", "html"]
repository = "https://github.com/oxidlabs/tera-hot-reload"
homepage = "https://github.com/oxidlabs/tera-hot-reload"

[dependencies]
tera-template-macro = "0.1.0" 
notify-debouncer-full = "0.3.1"
tower-livereload = "0.9.3"