[package]
name = "tera-hot-reload"
version = "0.2.3"
authors = ["Tebarem"]
edition = "2021"
description = "Hot Reload for Tera templates"
license = "MIT"
keywords = ["tera", "hot-reload", "reloading", "templating", "html"]
repository = "https://github.com/oxidlabs/tera-hot-reload"
homepage = "https://github.com/oxidlabs/tera-hot-reload"

[dependencies]
tera-template-macro = "0.1.3" 
notify-debouncer-full = "0.4.0"
tower-livereload = "0.9.3"