[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tera-hot-reload = { path = "../../." }
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version  = "1.39.2", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
tera = { version = "1.20", default-features = false}
tower-http = { version = "0.6.1", features = ["fs"] }